Implemented crosshair highlighting

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 Entity Hotness Graph:
-    - Clicks und Hotness Anzeige: Position relative zur graphgröße
-    - Fadenkreuz highlighting
+    - Horizontale Hilfslinien
     - Locations rausfiltern?
 
 Clicks Graph:
-    - Beschriftung der Achsen
     - Highlight InfoBox Positionierung
     - Tag Navigation begrenzen (1 - 30)
+
+Kommentieren
